aggiunto tab Clients connessi nella vista